Fix mobile alignment

--- a/_scss/partials/_other-projects.scss
+++ b/_scss/partials/_other-projects.scss
@@ -37,6 +37,9 @@
         &:first-of-type {
           margin-left: 0;
         }
+        @include mobile {
+          margin-left: 0px;
+        }
       }
       margin-left: 15px;
       margin-bottom: 20px;
